--- a/demo/index.html
+++ b/demo/index.html
@@ -29,9 +29,11 @@
     <link rel="import" href="../../app-pouchdb/pouchdb.html">
     <link rel="import" href="../../arc-models/project-model.html">
     <link rel="import" href="../../arc-models/request-model.html">
+    <link rel="import" href="../../arc-models/variables-model.html">
     <link rel="import" href="../../neon-animation/web-animations.html">
     <link rel="import" href="../../variables-evaluator/variables-evaluator.html">
     <link rel="import" href="../../variables-manager/variables-manager.html">
+    <link rel="import" href="../../variables-editor/variables-editor.html">
     <link rel="import" href="../../url-history-saver/url-history-saver.html">
     <link rel="import" href="../../request-hooks-logic/request-hooks-logic.html">
     <link rel="import" href="../../arc-request-logic/arc-request-logic.html">
@@ -41,7 +43,6 @@
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../../arc-data-generator/arc-data-generator.html">
-    <link rel="import" href="../../variables-editor/variables-editor.html">
     <link rel="import" href="../../arc-electron-default-theme/arc-electron-default-theme.html">
     <link rel="import" href="../../paper-styles/shadow.html">
     <link rel="import" href="../../saved-menu/saved-menu.html">
@@ -133,6 +134,7 @@
     </custom-style>
   </head>
   <body>
+    <variables-model></variables-model>
     <url-history-saver></url-history-saver>
     <variables-manager></variables-manager>
     <variables-evaluator id="eval" no-before-request></variables-evaluator>
@@ -423,6 +425,13 @@
           workspace.appendByProject(project);
         }
       };
+      // Mocking of the data export component.
+      document.body.addEventListener('export-data', function(e) {
+        e.preventDefault();
+        e.detail.result = new Promise((resolve) => {
+          resolve();
+        });
+      });
       window.addEventListener('transport-request', app.send);
       window.addEventListener('workspace-state-read', app._restoreHandler);
       window.addEventListener('workspace-state-store', app._storeHandler);
