Adding missing css to menu items

--- a/arc-request-workspace.html
+++ b/arc-request-workspace.html
@@ -224,11 +224,11 @@
         Code examples
       </paper-icon-item>
       <paper-icon-item class="save-file-icon menu-item" slot="request-context-menu">
-        <iron-icon icon="arc:archive" slot="item-icon"></iron-icon>
+        <iron-icon icon="arc:archive" class="context-menu-icon" slot="item-icon"></iron-icon>
         Save to file
       </paper-icon-item>
       <paper-icon-item class="save-drive-icon menu-item" slot="request-context-menu">
-        <iron-icon icon="arc:drive-color" slot="item-icon"></iron-icon>
+        <iron-icon icon="arc:drive-color"  class="context-menu-icon" slot="item-icon"></iron-icon>
         Save to Google Drive
       </paper-icon-item>
       <slot name="request-context-menu" slot="request-context-menu"></slot>
