--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,8 @@
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
         'arc-request-workspace-test.html',
-        'request-workspace-append-event-test.html'
+        'request-workspace-append-event-test.html',
+        'request-panels-mixin-test.html'
       ]);
     </script>
 
