--- a/test/arc-workspace-request-requests-mixin-test.html
+++ b/test/arc-workspace-request-requests-mixin-test.html
@@ -24,7 +24,7 @@
   </test-fixture>
 
   <script>
-  suite('ArcWorkspaceMixin', () => {
+  suite('ArcWorkspaceRequestsMixin', () => {
     function stateRestoreHandler(e) {
       e.preventDefault();
       e.detail.result = Promise.resolve();
